pkg/plugins/runtime/gateway/testdata/04-gateway-route.yaml
Clusters:
  Resources:
    echo-mirror-303ee71109a987aa:
      circuitBreakers:
        thresholds:
        - maxConnections: 1024
          maxPendingRequests: 1024
          maxRequests: 1024
          maxRetries: 3
      connectTimeout: 5s
      edsClusterConfig:
        edsConfig:
          ads: {}
          resourceApiVersion: V3
      name: echo-mirror-303ee71109a987aa
      outlierDetection:
        enforcingConsecutive5xx: 0
        enforcingConsecutiveGatewayFailure: 0
        enforcingConsecutiveLocalOriginFailure: 0
        enforcingFailurePercentage: 0
        enforcingSuccessRate: 0
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            idleTimeout: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
    echo-service:
      circuitBreakers:
        thresholds:
        - maxConnections: 1024
          maxPendingRequests: 1024
          maxRequests: 1024
          maxRetries: 3
      connectTimeout: 5s
      edsClusterConfig:
        edsConfig:
          ads: {}
          resourceApiVersion: V3
      name: echo-service
      outlierDetection:
        enforcingConsecutive5xx: 0
        enforcingConsecutiveGatewayFailure: 0
        enforcingConsecutiveLocalOriginFailure: 0
        enforcingFailurePercentage: 0
        enforcingSuccessRate: 0
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            idleTimeout: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
Endpoints:
  Resources:
    echo-mirror-303ee71109a987aa:
      clusterName: echo-mirror-303ee71109a987aa
    echo-service:
      clusterName: echo-service
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: 192.168.1.6
                portValue: 20006
          loadBalancingWeight: 1
          metadata:
            filterMetadata:
              envoy.lb:
                kuma.io/protocol: http
              envoy.transport_socket_match:
                kuma.io/protocol: http
Listeners:
  Resources:
    edge-gateway:HTTP:8080:
      address:
        socketAddress:
          address: 192.168.1.1
          portValue: 8080
      enableReusePort: true
      filterChains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            commonHttpProtocolOptions:
              headersWithUnderscoresAction: REJECT_REQUEST
              idleTimeout: 300s
            http2ProtocolOptions:
              allowConnect: true
              initialConnectionWindowSize: 1048576
              initialStreamWindowSize: 65536
              maxConcurrentStreams: 100
            httpFilters:
            - name: envoy.filters.http.router
            mergeSlashes: true
            normalizePath: true
            rds:
              configSource:
                ads: {}
                resourceApiVersion: V3
              routeConfigName: edge-gateway:HTTP:8080
            requestHeadersTimeout: 0.500s
            serverName: Kuma Gateway
            statPrefix: gateway-default
            streamIdleTimeout: 5s
            stripAnyHostPort: true
      listenerFilters:
      - name: envoy.filters.listener.tls_inspector
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: edge-gateway:HTTP:8080
      perConnectionBufferLimitBytes: 32768
      trafficDirection: INBOUND
Routes:
  Resources:
    edge-gateway:HTTP:8080:
      name: edge-gateway:HTTP:8080
      requestHeadersToRemove:
      - x-kuma-tags
      validateClusters: false
      virtualHosts:
      - domains:
        - echo.example.com
        name: edge-gateway:HTTP:8080:echo.example.com
        routes:
        - match:
            path: /
          route:
            requestMirrorPolicies:
            - cluster: echo-mirror-303ee71109a987aa
              runtimeFraction:
                defaultValue:
                  denominator: TEN_THOUSAND
                  numerator: 10
            weightedClusters:
              clusters:
              - name: echo-service
                weight: 1
              totalWeight: 1
Runtimes:
  Resources: {}
Secrets:
  Resources: {}
